resources/signaller-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: signaller
  name: signaller-api
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: signaller-api
  sessionAffinity: None
