resources/signaller-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: signaller
  name: signaller-api
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/affinity-mode: "persistent"
    cert-manager.io/issuer: signaller-ca
spec:
  tls:
    - hosts:
        - 'api.signaller.local'
      secretName: signaller-api-tls
  rules:
    - host: api.signaller.local
      http:
        paths:
          - path: /
            pathType: "Prefix"
            backend:
              service:
                name: signaller-api
                port:
                  number: 80
